crates/clan/clan-core/tests/snapshots/clan_golden__mlu_eng@rust.snap
---
source: tests/clan_golden.rs
expression: "&rust_output"
---
Speaker: SPE
  Utterances: 2
  Total morphemes: 18
  MLU: 9.000
  SD: 5.000
  Range: 4-14

Speaker: GES
  Utterances: 3
  Total morphemes: 16
  MLU: 5.333
  SD: 1.247
  Range: 4-7
