crates/clan/clan-core/tests/snapshots/clan_golden__mlu_mor_gra@clan.snap
---
source: tests/clan_golden.rs
expression: "&clan_output"
---
MLU for Speaker: *CHI:
  MLU (xxx, yyy and www are EXCLUDED from the utterance and morpheme counts):
	Number of: utterances = 1, morphemes = 6
	Ratio of morphemes over utterances = 6.000
	Standard deviation = NA

MLU for Speaker: *MOT:
  MLU (xxx, yyy and www are EXCLUDED from the utterance and morpheme counts):
	Number of: utterances = 1, morphemes = 4
	Ratio of morphemes over utterances = 4.000
	Standard deviation = NA
