crates/clan/clan-core/tests/snapshots/clan_golden__mlu_speaker_chi@rust.snap
---
source: tests/clan_golden.rs
expression: rust_output
---
Speaker: CHI
  Utterances: 1
  Total morphemes: 6
  MLU: 6.000
  SD: NaN
  Range: 6-6
