crates/clan/clan-core/tests/snapshots/clan_golden__mlu_words@rust.snap
---
source: tests/clan_golden.rs
expression: rust_output
---
Speaker: CHI
  Utterances: 1
  Total morphemes: 4
  MLU: 4.000
  SD: NaN
  Range: 4-4

Speaker: MOT
  Utterances: 1
  Total morphemes: 4
  MLU: 4.000
  SD: NaN
  Range: 4-4
