crates/clan/clan-core/tests/snapshots/clan_golden__modrep_pho@clan.snap
---
source: tests/clan_golden.rs
expression: clan_output
---
Speaker *CHI:
  1 mɑmiː
      1 ɑmɪ
Speaker *MOT:
  1 d
      1 a
  1 e
      1 b
  1 f
      1 c
