crates/clan/clan-core/tests/snapshots/clan_golden__modrep_pho@rust.snap
---
source: tests/clan_golden.rs
expression: rust_output
---
Speaker *CHI:
    1 ˈmɑmiː
        1 ˈɑmɪ

Speaker *MOT:
    1 d
        1 a
    1 e
        1 b
    1 f
        1 c
