crates/clan/clan-core/tests/snapshots/clan_golden__mortable_mor_gra@rust.snap
---
source: tests/clan_golden.rs
expression: rust_output
---
Speaker: CHI
  Total  Nouns  Verbs  Pronouns  Other
  -----  -----  -----  --------  -----
  4      1      1      2         0    

Speaker: MOT
  Total  Nouns  Verbs  Pronouns  Other
  -----  -----  -----  --------  -----
  4      1      2      1         0
