crates/clan/clan-core/tests/snapshots/clan_golden__phonfreq_pho@clan.snap
---
source: tests/clan_golden.rs
expression: clan_output
---
  2  ɑ   initial =   1, final =   0, other =   1
  2  ɪ   initial =   0, final =   1, other =   1
  1  +    initial =   0, final =   0, other =   1
  1  a    initial =   1, final =   0, other =   0
  1  b    initial =   1, final =   0, other =   0
  1  c    initial =   1, final =   0, other =   0
  1  k    initial =   0, final =   0, other =   1
  1  m    initial =   0, final =   0, other =   1
  1  w    initial =   1, final =   0, other =   0
